--- a/Lab02Mykhailenko/Views/PersonControl.xaml
+++ b/Lab02Mykhailenko/Views/PersonControl.xaml
@@ -11,32 +11,78 @@
     
     <Grid HorizontalAlignment="Center" Width="780" >
         <Grid.RowDefinitions>
+            <RowDefinition Height="40" />
+            <RowDefinition />
         <RowDefinition />
         <RowDefinition />
         <RowDefinition />
-        <RowDefinition />
-         <RowDefinition Height="40" />
+            <RowDefinition />
+            <RowDefinition />
+            <RowDefinition />
+            <RowDefinition />
+            <RowDefinition Height="40" />
     </Grid.RowDefinitions>
     <Grid.ColumnDefinitions>
         <ColumnDefinition Width="*" />
         <ColumnDefinition Width="*" />
-        <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="235" />
+        <ColumnDefinition Width="180" />
         </Grid.ColumnDefinitions>
 
-        <TextBlock FontSize="20" Grid.Row="0" Margin="5" Grid.Column="0" Foreground="Teal"
-         Text="Введіть ім'я: "/>
+        <TextBlock FontSize="20" Grid.Row="0" Margin="5" Grid.Column="2" Grid.ColumnSpan="2" Foreground="Teal" VerticalAlignment="Center" HorizontalAlignment="Center"
+         Text="Інформація про користувача" />
         <TextBlock FontSize="20" Grid.Row="1" Margin="5" Grid.Column="0" Foreground="Teal"
-         Text="Введіть прізвище: "/>
-        <TextBlock FontSize="20" Grid.Row="2" Margin="5" Grid.Column="0" Foreground="Teal"
-         Text="Введіть email: "/>
+         Text="Ім'я: "/>
         <TextBlock FontSize="20" Grid.Row="3" Margin="5" Grid.Column="0" Foreground="Teal"
-         Text="Введіть дату народження: "/>
+         Text="Прізвище: "/>
+        <TextBlock FontSize="20" Grid.Row="5" Margin="5" Grid.Column="0" Foreground="Teal"
+         Text="Email: "/>
+        <TextBlock FontSize="20" Grid.Row="7" Margin="5" Grid.Column="0" Foreground="Teal"
+         Text="Дата народження: "/>
 
-        <TextBox  Grid.Row="0" Margin="5" Grid.Column="1" VerticalAlignment="Top" HorizontalAlignment="Stretch" Height="30"/>
-        <TextBox  Grid.Row="1" Margin="5" Grid.Column="1" VerticalAlignment="Top" HorizontalAlignment="Stretch" Height="30"/>
-        <TextBox  Grid.Row="2" Margin="5" Grid.Column="1" VerticalAlignment="Top" HorizontalAlignment="Stretch" Height="30"/>
-        <DatePicker IsDropDownOpen="True" SelectedDateFormat="Short"  Grid.Row="3" Grid.Column="1" SelectedDate="{Binding Birthday, Mode=TwoWay}" />
+        <TextBox  Grid.Row="1" Margin="5" Grid.Column="1" VerticalAlignment="Top" HorizontalAlignment="Stretch" Height="30"
+                  Text="{Binding Name, Mode=TwoWay}"/>
+        <TextBox  Grid.Row="3" Margin="5" Grid.Column="1" VerticalAlignment="Top" HorizontalAlignment="Stretch" Height="30"
+                  Text="{Binding Surname, Mode=TwoWay}"/>
+        <TextBox  Grid.Row="5" Margin="5" Grid.Column="1" VerticalAlignment="Top" HorizontalAlignment="Stretch" Height="30"
+                  Text="{Binding Email, Mode=TwoWay}"/>
+        <DatePicker IsDropDownOpen="True" SelectedDateFormat="Short"  Grid.Row="7" Grid.Column="1" 
+                  SelectedDate="{Binding Birthday, Mode=TwoWay}" />
+        <Button  Grid.Row="9" Margin="5" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Stretch" Height="30" Content="Продовжити" Command="{Binding SelectDateCommand}"/>
 
-        <Button  Grid.Row="4" Margin="5" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Stretch" Height="30" Content="Продовжити" Command="{Binding SelectDateCommand}"/>
+        <TextBlock FontSize="20" Grid.Row="1" Margin="5" Grid.Column="2" Foreground="Teal"
+         Text="Ім'я: "/>
+        <TextBlock FontSize="20" Grid.Row="2" Margin="5" Grid.Column="2" Foreground="Teal"
+         Text="Прізвище: "/>
+        <TextBlock FontSize="20" Grid.Row="3" Margin="5" Grid.Column="2" Foreground="Teal"
+         Text="Email: "/>
+        <TextBlock FontSize="20" Grid.Row="4" Margin="5" Grid.Column="2" Foreground="Teal"
+         Text="Дата народження: "/>
+        <TextBlock FontSize="20" Grid.Row="5" Margin="5" Grid.Column="2" Foreground="Teal"
+         Text="Чи дорослий? "/>
+        <TextBlock FontSize="20" Grid.Row="6" Margin="5" Grid.Column="2" Foreground="Teal"
+         Text="Західна астрологія: "/>
+        <TextBlock FontSize="20" Grid.Row="7" Margin="5" Grid.Column="2" Foreground="Teal"
+         Text="Китайська астрологія: "/>
+        <TextBlock FontSize="20" Grid.Row="8" Margin="5" Grid.Column="2" Foreground="Teal"
+         Text="Чи сьогодні народився? "/>
+        
+        <TextBlock FontSize="20" Grid.Row="1" Margin="5" Grid.Column="3" Foreground="Teal"
+          Text="{Binding Name, Mode=TwoWay}"/>
+        <TextBlock FontSize="20" Grid.Row="2" Margin="5" Grid.Column="3" Foreground="Teal"
+         Text="{Binding Surname, Mode=TwoWay}"/>
+        <TextBlock FontSize="20" Grid.Row="3" Margin="5" Grid.Column="3" Foreground="Teal"
+         Text="{Binding Email, Mode=TwoWay}"/>
+        <TextBlock FontSize="20" Grid.Row="4" Margin="5" Grid.Column="3" Foreground="Teal"
+         Text="{Binding BirthdayToString, Mode=OneWay}"/>
+        <TextBlock FontSize="20" Grid.Row="5" Margin="5" Grid.Column="3" Foreground="Teal"
+          Text="{Binding IsAdult, Mode=OneWay}"/>
+        <TextBlock FontSize="20" Grid.Row="6" Margin="5" Grid.Column="3" Foreground="Teal"
+          Text="{Binding SunSign, Mode=OneWay}"/>
+        <TextBlock FontSize="20" Grid.Row="7" Margin="5" Grid.Column="3" Foreground="Teal"
+          Text="{Binding ChineseSign, Mode=OneWay}"/>
+        <TextBlock FontSize="20" Grid.Row="8" Margin="5" Grid.Column="3" Foreground="Teal"
+          Text="{Binding IsBirthday, Mode=OneWay}"/>
+
     </Grid>
 </UserControl>
