--- a/Lab02Mykhailenko/MainWindow.xaml
+++ b/Lab02Mykhailenko/MainWindow.xaml
@@ -6,8 +6,7 @@
         xmlns:local="clr-namespace:Lab02Mykhailenko"
         mc:Ignorable="d"
         xmlns:project="clr-namespace:Lab02Mykhailenko.Views"
-        Title="MainWindow" Height="450" Width="800"  MinHeight="420" MinWidth="800" Background="Beige">
-    <Grid>
-        <project:PersonControl></project:PersonControl>
-    </Grid>
+        Title="MainWindow" Height="450" Width="825"  MinHeight="420" MinWidth="825" Background="Beige">
+    
+        <project:AllPeople></project:AllPeople>
 </Window>
