--- a/Lab02Mykhailenko/Views/AllPeople.xaml
+++ b/Lab02Mykhailenko/Views/AllPeople.xaml
@@ -15,7 +15,7 @@
             <RowDefinition />
             <RowDefinition Height="40" />
         </Grid.RowDefinitions>
-        <DataGrid x:Name="peopleGrid" Grid.Row="0" AutoGenerateColumns="False" ItemsSource="{Binding Path=People}">
+        <DataGrid x:Name="peopleGrid" SelectedItem="{Binding Path=MyProperty}" Grid.Row="0" Grid.Column="0" AutoGenerateColumns="False" ItemsSource="{Binding Path=People}">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Ім'я"  Binding="{Binding Name}"/>
                 <DataGridTextColumn Header="Прізвище" Binding="{Binding Surname}"/>
@@ -25,6 +25,16 @@
                 <DataGridTextColumn Header="Західна астрологія:" Binding="{Binding SunSign}" />
                 <DataGridTextColumn Header="Китайська астрологія:" Binding="{Binding ChineseSign}" />
                 <DataGridTextColumn Header="Чи сьогодні народився?" Binding="{Binding IsBirthday}" />
+
+                <DataGridTemplateColumn Header="Редагувати" >
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate >
+                            <Button Name="xml_btn_001" 
+                                     Content="btn" 
+                                     Command="{Binding Path=DataContext.EditPersonCommand, RelativeSource={RelativeSource AncestorType={x:Type DataGrid}}}" />
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                </DataGridTemplateColumn>
             </DataGrid.Columns>
         </DataGrid>
 
