--- a/Lab02Mykhailenko/Views/AllPeople.xaml
+++ b/Lab02Mykhailenko/Views/AllPeople.xaml
@@ -17,7 +17,7 @@
         </Grid.RowDefinitions>
         <DataGrid x:Name="peopleGrid" SelectedItem="{Binding Path=MyProperty}" Grid.Row="0" Grid.Column="0" CanUserAddRows="False" AutoGenerateColumns="False" ItemsSource="{Binding Path=People, Mode=TwoWay}">
             <DataGrid.Columns>
-                <DataGridTemplateColumn Header="Ім'я" >
+                <DataGridTemplateColumn Header="Ім'я" SortMemberPath="Name" CanUserSort="True">
                     <DataGridTemplateColumn.CellTemplate >
                         <DataTemplate >
                             <TextBox  Text="{Binding Name, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
@@ -25,7 +25,7 @@
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
 
-                <DataGridTemplateColumn Header="Прізвище" >
+                <DataGridTemplateColumn Header="Прізвище" SortMemberPath="Surname" CanUserSort="True">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate >
                             <TextBox Text="{Binding Surname, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
@@ -33,7 +33,7 @@
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
 
-                <DataGridTemplateColumn Header="Email" >
+                <DataGridTemplateColumn Header="Email" SortMemberPath="Email" CanUserSort="True">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate >
                             <TextBox Text="{Binding Email, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
@@ -41,7 +41,7 @@
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
 
-                <DataGridTemplateColumn Header="Дата народження" >
+                <DataGridTemplateColumn Header="Дата народження" SortMemberPath="Birthday" CanUserSort="True">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate >
                             <DatePicker SelectedDateFormat="Short" 
