--- a/Lab02Mykhailenko/Views/AllPeople.xaml
+++ b/Lab02Mykhailenko/Views/AllPeople.xaml
@@ -14,8 +14,16 @@
         <Grid.RowDefinitions>
             <RowDefinition />
             <RowDefinition Height="40" />
+            <RowDefinition Height="20" />
+            <RowDefinition Height="40" />
+            <RowDefinition Height="150"/>
         </Grid.RowDefinitions>
-        <DataGrid x:Name="peopleGrid" SelectedItem="{Binding Path=MyProperty}" Grid.Row="0" Grid.Column="0" CanUserAddRows="False" AutoGenerateColumns="False" ItemsSource="{Binding Path=People, Mode=TwoWay}">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="*" />
+        </Grid.ColumnDefinitions>
+        <DataGrid x:Name="peopleGrid" SelectedItem="{Binding Path=MyProperty}" Grid.ColumnSpan="3" Grid.Row="0" Grid.Column="0" CanUserAddRows="False" AutoGenerateColumns="False" ItemsSource="{Binding Path=People, Mode=TwoWay}">
             <DataGrid.Columns>
                 <DataGridTemplateColumn Header="Ім'я" SortMemberPath="Name" CanUserSort="True">
                     <DataGridTemplateColumn.CellTemplate >
@@ -75,6 +83,12 @@
         </DataGrid>
 
         <Button  Grid.Row="1" Margin="5" Grid.Column="1" VerticalAlignment="Center" Width="200" Height="30" Content="Додати персону" Command="{Binding AddPersonCommand}"/>
+        <TextBlock FontSize="15" Grid.Row="2" Grid.Column="0" Foreground="Teal"  Text="Фільтрація: "/>
 
+        <ComboBox Height="35" Width="150"  Grid.Row="3" Grid.Column="0" ItemsSource="{Binding AllColumns}" SelectedItem="{Binding WordToFind}"></ComboBox>
+        <TextBox   Grid.Row="3"  Margin="5" Grid.Column="1" VerticalAlignment="Top" HorizontalAlignment="Stretch" Height="30"
+                  Text="{Binding WordForSearch}"/>
+        <Button  Grid.Row="3" Margin="5" Grid.Column="2" VerticalAlignment="Center" Width="200" Height="30" Content="Фільтрувати" Command="{Binding FilterCommand}"/>
+        <DataGrid Grid.Row="4" Grid.ColumnSpan="3"  ItemsSource="{Binding SelectedPeople}" IsReadOnly="True" CanUserAddRows="False"></DataGrid>
     </Grid>
 </UserControl>
